--- a/src/Pages/Beer/components/Beer.module.css
+++ b/src/Pages/Beer/components/Beer.module.css
@@ -38,4 +38,11 @@
 
 .contribution {
   font-size: 10px;
+  margin-bottom: 15px;
+}
+
+.read_more {
+  composes: contribution;
+  font-weight: bold;
+  color: brown;
 }
