--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,5 +1,6 @@
 .App {
-  text-align: center;
+  margin: 20px auto;
+  max-width: 800px;
 }
 
 .container {
@@ -7,4 +8,19 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.beer_container {
+  max-width: 100%;
+  font-size: 15px;
+}
+
+.fw_image {
+  width: 100%;
+  margin-top: 30px;
+}
+
+.title {
+  font-size: 30px;
+  margin-top: 10px;
 }
