--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,26 @@
-.App {
-  text-align: center;
+.wholeItem{
+  display: flex;
+  height: 20vh;
+  margin: 10px; 
+  padding : 10px 0px;
+  border-bottom: 1px solid rgb(165, 160, 160);
+}
+
+.divImage{
+  width: 30%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.divDescription{
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 10px;
+}
+
+.imgBeer{
+  height: 100%;
 }
