--- a/src/components/BeerCard/BeerCard.scss
+++ b/src/components/BeerCard/BeerCard.scss
@@ -2,7 +2,7 @@
     border: 1px solid rgb(177, 177, 177);
     border-radius: 15px;
     padding: 2rem;
-    margin: 1rem;
+    margin-top: 1rem;
     display: flex;
     justify-content: flex-start;
     align-items: center;
