--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,22 @@
 .App {
   text-align: center;
-  padding: 25px;
+  margin: 0;
+  padding: 0;
+}
+
+.App > nav {
+  background-color: hsl(198deg 97% 61%);
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .BeerList-container {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
+  padding: 20px;
 }
