--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Roboto+Condensed:wght@300&family=Roboto:wght@100;300&display=swap');
+
+.App{
   text-align: center;
+  font-family:'Roboto'
 }
