--- a/src/components/BeerList.css
+++ b/src/components/BeerList.css
@@ -27,3 +27,12 @@
 .Beer-created {
     margin-top: -10px;
 }
+
+.nav {
+    background-color: #32c3fd;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
