--- a/src/components/Beer/index.css
+++ b/src/components/Beer/index.css
@@ -1,29 +1,42 @@
 .image img{
   height: 120px;
   padding: 10px 25px;
-  
+  object-fit: contain;
 }
 .image {
   display: flex;
+  width: 100px;
+  height: 110px;
 }
 
 .content {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  flex: 1;
+  text-align: left;
 }
-.content h4{
-  color: rgb(189, 189, 189)
+.content h5{
+  color: rgb(189, 189, 189);
+  margin: 0;
+  font-weight: 500;
+  font-size: 20px;
 }
 
 .content p {
-  margin: 0;
+  margin: 5px 0;
+  font-size: 13px;
+}
+.content h3 {
+  margin: 16px 0;
+  font-weight: bolder;
+  font-size: 25px;
 }
 
 .beer{
   display: flex;
     align-items: center;
     justify-content: center;
-    gap: 2rem;
+    gap: 1rem;
     margin: 40px;
 }
