--- a/src/views/Home/index.css
+++ b/src/views/Home/index.css
@@ -6,7 +6,7 @@
 }
 
 .Home img{
-  width: 510px;
+  width: 410px;
   margin-top: 5px;
 }
 
@@ -15,6 +15,7 @@
   margin: 0;
   font-weight: 100;
   margin-left: 25px;
+  margin-right: 25px;
   
 }
 
@@ -27,12 +28,14 @@
 }
 
 .home-card{
-  margin-bottom: 20px;
-  width: 500px;
+  width: 410px;
+  margin: 10px auto;
 }
+
 
 .home-div{
   display: flex;
     justify-content: center;
     flex-direction: column;
+    width: 100%;
 }
